# equity-lakehouse

./: .gitignore  AGENTS.md  README.md  activating-apis.sh  create_backfill_sa.sh  finpipe-gcp-lakehouse-setup.md  gcp-bootstrap-plan.md  grant_secret_access.sh  pyproject.toml  query_lakehouse_schema.sh  setup.md
.cursor/rules/: equity-lakehouse-context.mdc
.github/workflows/: deploy-ingest.yml
cloud_run/: README.md  get_keys.py
cloud_run/ingest/: Dockerfile  main.py
docs/: new-project-setup.md  platform-architecture.md
equity_lakehouse/: insert_sample.py
finpipe/: __init__.py  assets.py
for-agents/: README.md  architecture.md  common-tasks.md  conventions.md  data-model.md  for-recruiters.md  gotchas.md  infra.md  repo-map.md
gcp-spark/: dagster_asset.py  finpipe_ohlc_job.py  pyproject.toml  requirements-google-cloud.txt  spark_config.yaml
ref/: 10_network.sh  40_lakehouse.sh  60_vm.sh  70_cloud_run.sh  80_secrets.sh  README.md  config.env.example
scripts/: create-lakehouse-catalog.sh  test_insert.py
to-work-on/cloud_run/: control.py  test_download.py
to-work-on/cloud_run/ingest/: pyproject.toml
to-work-on/gcp-spark/: dataproc_ohlc_batch.example.json  dataproc_serverless.py  submit_finpipe_ohlc_batch.py  test.py
to-work-on/ref/: 20_iam.sh  30_storage.sh  50_dataproc.sh  activating-apis.sh  create_backfill_job.sh  create_bucket.sh  create_secret.sh  massive.env.example  teardown.sh
