[project]
name = "finpipe"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "google-cloud-run>=0.10",
    "google-cloud-storage>=2.18",
    "pendulum>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "finpipe"
