[project]
name = "equity-lakehouse"
version = "0.1.0"
description = "Sample Iceberg writes against the Lakehouse REST catalog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-auth",
  "pyarrow",
  "pyiceberg[pyarrow]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["equity_lakehouse"]

[project.scripts]
insert-sample = "equity_lakehouse.insert_sample:main"
