[project]
name = "gavin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.49.2",
    "google-cloud-dataproc>=5.22.0",
    "google-cloud-storage>=2.19.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pyiceberg>=0.11.1",
]
